Changed the color of the unread messages icon

--- a/skins/elastic/styles/styles.css
+++ b/skins/elastic/styles/styles.css
@@ -3531,7 +3531,7 @@ ul.treelist.notree li>a {
     margin: 7.7px;
     padding: 0 .3em;
     border-radius: .4em;
-    background: #37beff;
+    background: #00a550e6;
     color: #292929;
     text-align: center;
     font-weight: bold
